gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test1.d
version https://git-lfs.github.com/spec/v1
oid sha256:a3a51f8ea995cfff35eec59d5eb2d138ed2c4b1c6ff2ac0d7b44185481d617a7
size 104
